[gd_scene load_steps=6 format=3 uid="uid://siv2nx55laya"]

[ext_resource type="Script" uid="uid://bgpdi7ca4xasg" path="res://game files/ui/block/nested_block/nested_block.gd" id="1_sjyww"]
[ext_resource type="Texture2D" uid="uid://b1kl1anwvd8mg" path="res://game files/ui/block/nested_block/StatementBlock-hover.png" id="2_t3bv2"]
[ext_resource type="Script" uid="uid://uiundroog480" path="res://game files/ui/block/nested_block/nine_patch_rect.gd" id="3_rrmqx"]
[ext_resource type="Script" uid="uid://cijvae4j3nbg7" path="res://game files/ui/block/nested_block/mouth.gd" id="4_6cnl0"]

[sub_resource type="GDScript" id="GDScript_6cnl0"]
script/source = "extends MarginContainer


func _ready() -> void:
	pass # Replace with function body.
"

[node name="NestedBlock" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_sjyww")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
texture = ExtResource("2_t3bv2")
patch_margin_left = 28
patch_margin_top = 36
patch_margin_right = 8
patch_margin_bottom = 24
script = ExtResource("3_rrmqx")

[node name="UpperLip" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 4
script = SubResource("GDScript_6cnl0")

[node name="ColorRect" type="ColorRect" parent="UpperLip"]
visible = false
layout_mode = 2
color = Color(1, 0.03, 0.03, 0.709804)

[node name="Mouth" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 36.0
offset_right = 28.0
offset_bottom = 36.0
theme_override_constants/separation = 0
script = ExtResource("4_6cnl0")

[node name="LowerLip" type="Control" parent="."]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
